Fixing an It2Me crash in TouchInjectorWin::Deinitialize on Windows

I've seen this issue on local builds sporadically and have also seen
reports in the field.  What appears to happen is the user starts an
It2Me connection and while waiting for the connection to be
established, remoting::ClientSession::OnConnectionClosed() is called
and we clean up all of the connection classes.  Since the connection
was never accepted, we did not call 'Start()' on the InputInjector
which means the underlying TouchInjector instance was never
initialized.  When 'Stop()' is called as part of shutdown, the
TouchInjector* is null and we crash.

BUG=722372

Change-Id: Idae60d7a6951d009a8ff82d3523840a8e719ac71
Reviewed-on: https://chromium-review.googlesource.com/887646
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Joe Downing <joedow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532021}
Former-commit-id: 495668dec1b4bc3a38d6154c4736c018d758e738